--- a/content.html
+++ b/content.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Love is Everything!</h1>
-    <img src=":media/love.jpg" alt="Love">
+    <img src="/:media/love.jpg" alt="Love">
 </body>
 </html>
