--- a/content.html
+++ b/content.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charm AI - Love is Everything</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Love is Everything!</h1>
-    <img src="/:media/love.jpg" alt="Love">
+    <img src="/Users/ak/Downloads/love.jpg" alt="Love">
 </body>
 </html>
