--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charm AI - Dating App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to Charm AI - Your Personalized Dating App!</h1>
     <video autoplay loop muted controls>
-        <source src="/:media/dating.mp4" type="video/mp4" />
+        <source src="/Users/ak/Downloads/dating.mp4" type="video/mp4" />
     </video>
     <br><br>
     <a href="content.html">
