--- a/content.html
+++ b/content.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Charm AI - Love is Everything</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://niveditamanickam.github.io/style.css">
 </head>
 <body>
     <h1>Love is Everything!</h1>
