--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to Charm AI - Your Personalized Dating App!</h1>
     <video autoplay loop muted controls>
-        <source src="/:media/dating.mp4" type="video/mp4" />
+        <source src=":media/dating.mp4" type="video/mp4" />
     </video>
     <br><br>
     <a href="content.html">
